--- a/wk14/anotherImageSlider/assets/css/styles.css
+++ b/wk14/anotherImageSlider/assets/css/styles.css
@@ -34,6 +34,15 @@
     font-size: 3vw;
 }
 
-.slides-right .fa-chevron-circle-left{
+.old{
     
+    right: 50vw;
+}
+
+.slides-right .fa-chevron-circle-left{
+    right: 2.5em;    
+}
+
+.slides-right .fa-chevron-circle-right{
+    right: 1em;    
 }
