added new files

--- a/wk14/anotherImageSlider/assets/css/styles.css
+++ b/wk14/anotherImageSlider/assets/css/styles.css
@@ -2,10 +2,11 @@
     width: 100vw;
     height: 18.75vw;
     position: relative;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     box-sizing: border-box;
 
     display: flex;
+    border:1px red solid;
 }
 
 .slides-left{
@@ -17,13 +18,34 @@
     position: absolute;
     width: 100%;
     top: 0;
-    left: 0;
+    left: -100%;
+    /* z-index: 50; */
+    transition: all ease 1s; 
+}
+
+.slides-left>.current{
+    transform: translate(100%,0);
+    z-index: 50;
+}
+
+.slides-left>.old{
+    transform: translate(200%, 0);
+    z-index: 50;
+}
+
+.slides-left>.older{
+    transform: translate(300%, 0);
+    z-index: 0;
 }
 
 .slides-right{
     flex: 1 0 40%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     position: relative;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* background-image:linear-gradient(90deg,rgba(0,0,0,0),black); */
+
+    z-index: 60;
 }
 
 .slides-right i{
@@ -32,11 +54,7 @@
     z-index: 100;
     transform: translate(0,-50%);
     font-size: 3vw;
-}
-
-.old{
-    
-    right: 50vw;
+    color: rgba(255, 255, 255, 0.5);
 }
 
 .slides-right .fa-chevron-circle-left{
