--- a/wk15/anotherFormValidation/FormValidation/styles.css
+++ b/wk15/anotherFormValidation/FormValidation/styles.css
@@ -7,14 +7,17 @@
 
 .card-container{
     border: 1px solid blue;
+    height: 200px;
     position: relative;
+    
+
 }
 
-.card-container i{
+.card-container>i{
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
-    font-size: 5vw;
+    font-size: 2vw;
 }
 
 .card-container .fa-chevron-left{
@@ -26,25 +29,74 @@
 }
 
 .cards{
-    position: relative;
-    padding: 1em;
+    
 }
 
 .card{
+    /* border: thin solid; */
+    width: 200px;
+    height: 100px;
 
+    border-radius: 5px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-55%, -60%);
+    box-sizing: border-box;
+
+    background-color: transparent;
+    opacity: 0.1;
+    transition: all ease 1s;
+
+    /*  */
+    perspective: 1000px;
 }
 
+.flip-box-inner{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    /* text-align: center; */
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    border: 1px solid;
+}
+
+.current:hover .flip-box-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-box-front, .flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.flip-box-front{
+    background-color: white;
+    box-sizing: border-box;
+    padding: 0.5em;
+}
+
+.flip-box-back{
+    background-color: white;
+    transform: rotateY(180deg);
+    box-sizing: border-box;
+    padding: 0.5em;
+}
+
+.cards>.current{
+    z-index: 10;
+    opacity: 1;
+    transform: translate(-50%, -50%);
+}
 
 .nav-bar{
     border: 1px solid blue;
     text-align: center;
     padding: 0.5em;
-}
-
-.card{
-    border: thin solid;
-    width: 200px;
-    height: 100px;
 }
 
 .form-container{
@@ -54,3 +106,20 @@
     display: flex;
 }
 
+form>*{
+    padding-bottom: 1em;
+}
+
+
+span{
+    visibility: hidden;
+}
+.correct{
+    visibility: visible;
+    color: green;
+}
+
+.incorrect{
+    visibility: visible;
+    color: red;
+}
