added parallax ex

--- a/wk17/practice_anime/assets/styles.css
+++ b/wk17/practice_anime/assets/styles.css
@@ -1,7 +1,8 @@
-.row{
-    border: 1px solid red;
+.section{
+    /* border: 1px solid red; */
+    min-height: 100vh;
 }
 
-.col{
-    border: 1px solid blue;
+.col-sm-6{
+    padding-bottom: 1em;
 }
