--- a/wk18/formative2.2/assets/styles.css
+++ b/wk18/formative2.2/assets/styles.css
@@ -58,8 +58,33 @@
     /* border: 1px solid red; */
     position: absolute;
     bottom: 10vh;
-    background-image: url(PinClipart.com_red-ribbon-week-clipart_4025765.png);
+    
+}
+
+.singleMushroom{
+    width: 100%;
+    height: 100%;
+    background-image: url(5cfe138bb8322.png);
     background-position: center;
     background-size: cover;
     z-index: 21;
+
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    transform-origin: bottom;
 }
+
+.bounce-5 {
+    animation-name: bounce-5;
+    animation-timing-function: ease;
+}
+@keyframes bounce-5 {
+    0%   { transform: scale(1,1)    translateY(0); }
+    10%  { transform: scale(1.1,.9) translateY(0); }
+    30%  { transform: scale(.9,1.1) translateY(-100px); }
+    50%  { transform: scale(1,1)    translateY(0); }
+    57%  { transform: scale(1,1)    translateY(-7px); }
+    64%  { transform: scale(1,1)    translateY(0); }
+    100% { transform: scale(1,1)    translateY(0); }
+}
+
