--- a/wk18/formative2.2/assets/styles.css
+++ b/wk18/formative2.2/assets/styles.css
@@ -1,34 +1,54 @@
 *{
     padding: 0;
     margin: 0;
+    list-style-type: none;
+    text-decoration: none;
+}
+
+.container{
+    height: 100vh;
+    overflow: hidden;
+    /* prevent margin collapse */
+    border-bottom: thin transparent solid;
+    border-top: thin transparent solid;
 }
 
 .section1{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: 1100vh;
-    overflow: hidden;
-    position: relative;
-}
-
-.section1 .viewport{
-    border: 1px solid blue;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
+    
     /* position: relative; */
 }
 
-.layers .layer{
-    position: absolute;
-    width: 100%;
+.section1 .viewport{
+    /* border: 1px solid blue; */
     height: 100vh;
+    box-sizing: border-box;
+    overflow: hidden;
+    position: relative;
+}
+.section1 .layers{
+/* .layers .layer{ */
+    border: 1px solid green;
+    /* position: relative; */
+    position: absolute;
     top: 0;
     left: 0;
-    overflow: hidden;
-    background-position: center;
-    background-size: cover;
+    width: 100vw;
+    height: 100vh;
     /* background-position: top center;
     background-repeat: no-repeat; */
+}
+.section1 .layer{
+    border: 1px solid black;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    /* overflow: hidden; */
+    top: 0;
+    left: 0;
 }
 
 .layer0{
@@ -53,31 +73,182 @@
 }
 
 .layer5{
-    width: 100px;
-    height: 100px;
-    /* border: 1px solid red; */
-    position: absolute;
-    bottom: 10vh;
-    
+    /* border: 1px solid yellow;
+    width: 100%;
+    height: 100%; */
+
 }
 
 .singleMushroom{
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
     background-image: url(5cfe138bb8322.png);
     background-position: center;
     background-size: cover;
-    z-index: 21;
+    z-index: 19;
+    position: absolute;
+    bottom: 10vh;
 
     animation-duration: 2s;
     animation-iteration-count: infinite;
     transform-origin: bottom;
 }
 
+.singleSlime{
+    width: 100px;
+    height: 100px;
+    background-image: url(5cfe13a71ce38.png);
+    background-position: center;
+    background-size: cover;
+    z-index: 19;
+    position: absolute;
+    bottom: 10vh;
+    animation-delay: 0.5s;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    transform-origin: bottom;
+}
+
+.singlePig{
+    width: 100px;
+    height: 100px;
+    background-image: url(PinClipart.com_red-ribbon-week-clipart_4025765.png);
+    background-position: center;
+    background-size: cover;
+    z-index: 19;
+    position: absolute;
+    bottom: 8vh;
+
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    transform-origin: bottom;
+}
+
+
+.mushroom{
+    width: 100px;
+    height: 100px;
+    background-image: url(5cfe138bb8322.png);
+    background-position: center;
+    background-size: cover;
+    z-index: 19;
+    position: absolute;
+    bottom: 10vh;
+
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    transform-origin: bottom;
+}
+.mushroom1{
+    left: 10vw;
+    bottom: 10vh;
+}
+.mushroom2{
+    left: 35vw;
+    bottom: 12vh;
+}
+
+.slime{
+    width: 100px;
+    height: 100px;
+    background-image: url(5cfe13a71ce38.png);
+    background-position: center;
+    background-size: cover;
+    z-index: 19;
+    position: absolute;
+    bottom: 10vh;
+
+    animation-delay: 0.5s;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    transform-origin: bottom;
+}
+.slime1{
+    left: 23vw;
+    bottom: 8vh;
+}
+.slime2{
+    left: 50vw;
+    bottom: 10vh;
+}
+
+.pig{
+    width: 100px;
+    height: 100px;
+    background-image: url(PinClipart.com_red-ribbon-week-clipart_4025765.png);
+    background-position: center;
+    background-size: cover;
+    z-index: 19;
+    position: absolute;
+    bottom: 10vh;
+
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    transform-origin: bottom;
+}
+.pig1{
+    left: 2vw;
+    bottom: 10vh;
+}
+.pig2{
+    left: 70vw;
+    bottom: 10vh;
+}
+.layer6{
+    /* width: 100px;
+    height: 100px;
+    border: 1px solid red;
+    position: absolute;
+    bottom: 15vh;
+    background-image: url(PinClipart.com_red-ribbon-week-clipart_4025765.png); */
+}
+
+.signpost{
+    border: 1px solid red;
+    width: 80vw;
+    height: 30vh;
+    background-image: url(Asset_1.svg);
+    background-repeat: no-repeat;
+    /* background-size: cover; */
+    background-position: bottom;
+    position: absolute;
+    bottom: 0vh;
+}
+
+.nav{
+    display: flex;
+    justify-content: space-around;
+    color: white;
+}
+
+.invisible{
+    opacity: 0;
+}
+
+.panel{
+    border: 1px solid red;
+    background-image: url(Asset_2.svg);
+    /* background-size: cover; */
+    background-repeat: no-repeat;
+    background-position: top center;
+    width: 80vw;
+    height: 60vh;
+    position: absolute;
+    top: 10vh;
+    left: 50vw;
+    transform: translate(-50%,0);
+}
+
+.layer10{
+    pointer-events: none;
+}
+
+
 .bounce-5 {
     animation-name: bounce-5;
     animation-timing-function: ease;
 }
+
 @keyframes bounce-5 {
     0%   { transform: scale(1,1)    translateY(0); }
     10%  { transform: scale(1.1,.9) translateY(0); }
@@ -87,4 +258,3 @@
     64%  { transform: scale(1,1)    translateY(0); }
     100% { transform: scale(1,1)    translateY(0); }
 }
-
