--- a/wk19/summative2.0/code/stylesheets/main.css
+++ b/wk19/summative2.0/code/stylesheets/main.css
@@ -1,1 +1,252 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+.modal {
+  position: absolute;
+  border: medium solid #1F3D57;
+  width: 75%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #1F3D57;
+  border-radius: 10px;
+  -webkit-box-shadow: -1px -1px 10px -2px rgba(0, 0, 0, 0.5);
+          box-shadow: -1px -1px 10px -2px rgba(0, 0, 0, 0.5);
+  background-color: white;
+  padding: 1em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-align: center;
+  opacity: 0;
+  z-index: 0;
+  pointer-events: none;
+  -webkit-transition: all ease 1s;
+  transition: all ease 1s;
+}
+
+.showModal {
+  pointer-events: all;
+  z-index: 10;
+  opacity: 1;
+}
+
+.closeModal {
+  color: #ED2A28;
+}
+
+.vehicleModal .vehicles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.vehicleModal .vehicle {
+  border: 1px solid;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 40%;
+          flex: 1 0 40%;
+  margin: 5px;
+  opacity: 0.1;
+  pointer-events: none;
+}
+
+.vehicleModal .vehicle i {
+  font-size: 3em;
+}
+
+.available {
+  opacity: 1 !important;
+  pointer-events: all !important;
+}
+
+.selected {
+  color: #87AB3D;
+}
+
+.final {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.final div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  text-align: center;
+}
+
+.final #fix {
+  display: block;
+}
+
+.sliderContainer {
+  width: 100%;
+}
+
+.slider {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  -webkit-transition: .2s;
+  -webkit-transition: opacity .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #87AB3D;
+  cursor: pointer;
+}
+
+.app {
+  border: 1px solid #ccc;
+  width: 100vw;
+  height: 100vh;
+  margin: auto;
+  position: relative;
+}
+
+.app .layer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: white;
+}
+
+.app header {
+  height: 10vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0.5em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #1F3D57;
+  color: white;
+}
+
+.app header .left {
+  font-size: 1.5em;
+}
+
+.app header .middle {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+  text-align: center;
+}
+
+.app header .right {
+  font-size: 1.5em;
+}
+
+.app main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+}
+
+.aucklandTransport {
+  background-image: url(/wk19/summative2.0/code/assets/ATScreenshot.jpg);
+  width: 100%;
+  height: 100%;
+}
+
+#map {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.icons {
+  position: absolute;
+  width: 50%;
+  top: 20%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  text-align: center;
+  z-index: 2;
+  color: #1F3D57;
+}
+
+.icons .icon {
+  border: medium solid #1F3D57;
+  background-color: white;
+  border-radius: 50%;
+  width: 2em;
+  height: 2em;
+  line-height: 2em;
+  font-size: 1.5em;
+}
+
+.distance {
+  border: medium solid #1F3D57;
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  width: 75%;
+  height: 25%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  padding: 1em;
+  border-radius: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  z-index: 2;
+  background-color: white;
+  color: #1F3D57;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  text-align: center;
+}
+
+.distance select {
+  border: 1px solid;
+  text-align: center;
+}
+/*# sourceMappingURL=main.css.map */
