--- a/wk24/react-myApp/styles.css
+++ b/wk24/react-myApp/styles.css
@@ -1,26 +1,38 @@
+@import 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css';
+@import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css';
+
 *{
     margin: 0;
     padding: 0;
     font-family: Helvetica;
 }
 
-.wrap{
-    border: 1px solid #ccc;
+.container{
+    border: 1px solid red;
     width: 480px;
     height: 640px;
-    /* overflow: */
-    margin: auto;
-    position: relative;
-    border-radius: 5px;
-    overflow: hidden;
-
+    border-radius: 10px;
 }
 
 .title{
     border: 1px solid green;
-    /* position: absolute; */
     width: 100%;
     text-align: center;
     padding: 2em;
     box-sizing: border-box;
+}
+
+.notes{
+    border: 1px solid blue;
+}
+
+.note{
+    border: 1px solid red;
+    padding: 1em;
+    display: flex;
+    justify-content: space-between;
+}
+
+.new-note{
+    align-items: center;
 }
