--- a/wk24/react-myApp/my-app/src/App.css
+++ b/wk24/react-myApp/my-app/src/App.css
@@ -1,4 +1,44 @@
-.App {
+@import 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css';
+@import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css';
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Helvetica;
+}
+
+.container{
+    /* border: 1px solid red; */
+    width: 480px;
+    height: 640px;
+    border-radius: 10px;
+}
+
+.title{
+    /* border: 1px solid green; */
+    background-color: #ccc;
+    width: 100%;
+    text-align: center;
+    padding: 2em;
+    box-sizing: border-box;
+}
+
+.note{
+    border: 1px solid #ccc;
+    padding: 1em;
+    display: flex;
+    justify-content: space-between;
+}
+
+.note:nth-child(2n+2){
+    background-color: #ccc;
+}
+
+.new-note{
+    align-items: center;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -30,4 +70,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
