--- a/wk24/react-myApp/styles.css
+++ b/wk24/react-myApp/styles.css
@@ -8,29 +8,30 @@
 }
 
 .container{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 480px;
     height: 640px;
     border-radius: 10px;
 }
 
 .title{
-    border: 1px solid green;
+    /* border: 1px solid green; */
+    background-color: #ccc;
     width: 100%;
     text-align: center;
     padding: 2em;
     box-sizing: border-box;
 }
 
-.notes{
-    border: 1px solid blue;
-}
-
 .note{
-    border: 1px solid red;
+    border: 1px solid #ccc;
     padding: 1em;
     display: flex;
     justify-content: space-between;
+}
+
+.note:nth-child(2n+2){
+    background-color: #ccc;
 }
 
 .new-note{
