--- a/wk26/portfolio-app/view-layout/src/App.css
+++ b/wk26/portfolio-app/view-layout/src/App.css
@@ -20,12 +20,12 @@ body{
 
 .view{
 	min-height: 100vh;
-	display: none !important;
+	/* display: none !important; */
 }
 
-.active{
+/* .active{
 	display: flex !important;
-}
+} */
 
 
 /*layout in each view*/
